--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,9 @@
-sonar.projectKey=forofs3
-sonar.projectName=forofs3 web app
+sonar.projectKey=foringa-app
+sonar.projectName=foringa-app
 sonar.projectVersion=1.0
- 
+
 sonar.sources=src
-sonar.language=ts
-sonar.sourceEncoding=UTF-8
- 
 sonar.exclusions=**/*.spec.ts,**/node_modules/**
- 
-# si usas coverage con karma o jest
+sonar.host.url=http://localhost:9000
+sonar.token=sqp_39809544359acf10f75c1d72274e9202e1bd0231
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
